drupal/profiles/takepart/themes/takepart3/css/style.css
/* ... */
.main-content .boxes-selected-style-6 .views-row:hover .views-field-title a,.main-content .boxes-selected-style-6 .views-row:hover .views-field-field-article-subhead a,.main-content .boxes-selected-style-6 .views-row:hover .views-field-nid a {
    color:#1ca9e7;
    text-decoration:none;
}
.main-content .boxes-selected-style-6 .views-row-4,.main-content .boxes-selected-style-6 .views-row-7,.main-content .boxes-selected-style-6 .views-row-10 {
    clear:both;
}
.main-content .boxes-selected-style-6 h2 {
    border-top:1px dotted #000;
    background:url(../images/2012-02-08/45deg_lines_large.gif) repeat-x scroll 0 10px transparent;
    width:100%;
    margin:0;
    padding:10px 0;
}
.main-content .boxes-selected-style-6 h2 span {
    background:none repeat scroll 0 0 #FFF;
    text-transform:uppercase;
    font-weight:300;
    padding:0 8px 0 0;
}
.main-content .boxes-selected-style-6 .content {
    background-color:#eff3f5;
}
.main-content .boxes-selected-style-6 .views-row {
    display:table;
    background-color:#FFF;
    vertical-align:top;
    width:200px;
    float:left;
    margin:5px;
}
.main-content .boxes-selected-style-6 .view-content {
    display:inline-block;
    padding:5px 4px 1px;
}
.main-content .boxes-selected-style-6 .views-field-field-thumbnail-1 {
    overflow:visible;
    position:relative;
    width:0;
}
.main-content .boxes-selected-style-6 .views-field-field-thumbnail-1 .field-content {
    height:150px;
    width:200px;
    overflow:hidden;
    margin-bottom:10px;
}
.main-content .boxes-selected-style-6 .views-field-field-thumbnail-1 .field-content img {
    width:200px;
}
.main-content .boxes-selected-style-6 .views-row:hover {
    border:3px solid #14ade7;
    margin:2px;
}
.main-content .boxes-selected-style-6 .action:hover {
    border:3px solid #f7c806 !important;
    margin:2px;
}
.main-content .boxes-selected-style-6 .action .views-field-field-display-tag .field-content {
    background-color:#f7c806 !important;
}
.main-content .boxes-selected-style-6 .views-field-field-display-tag {
    height:0;
    overflow:visible;
    z-index:100;
    position:absolute;
}
.main-content .boxes-selected-style-6 .views-field-field-display-tag .field-content {
    background-color:#9BC;
    color:#FFF;
    display:inline-block;
    font-size:11px;
    font-weight:700;
    line-height:18px;
    margin-top:123px;
    text-transform:uppercase;
    padding:4px 5px;
}
.boxes-selected-style-6 .views-field-field-promo-text .field-content {
    padding-bottom:4px;
}
.node-type-openpublish-photo-gallery div.takepart_addthis_leftpane
l div.addthis_toolbox a.addthis_button_google_plusone,.node-type-openpublish-photo-gallery div.takepart_addthis_leftpanel div.addthis_toolbox a.addthis_button_linkedin {
    width:50px !important;
}
.node-type-topic-front .block-boxes-current-featured_items .view-dom-id-1 .views-field-php {
    padding-top: 3em;
}
.node-type-takepart-campaign .block-boxes-current-featured_items .view-dom-id-1 .views-field-php {
    padding-top: 3em;
}
.node-type-takepart-campaign .main-content .block-boxes h2 {
    border-top: 0 none;
}
.node-type-takepart-campaign .main-content .block-boxes h2 {
    border-top: 0 none;
}
.node-type-takepart-campaign .view .block-boxes h2 {
    border-top: 1px dotted #000000;
}
.block-boxes-view .main-content h2 {
    border-top: 1px dotted #000000 !important;
}
/* ticket #23275 pglatz 4/25/12 */
#block-boxes-box-3df7e268 {
    display: none;
}
/* ticket #23275 pglatz 5/2/12, inside pages */
#widget_pager_top_photo_gallery-block li {
    display: none;
}
.view-photo-gallery .views-slideshow-controls-top {
    min-height:79px;
}

#highlighted {
    background: #FFF;
    padding: 0;
}

body.node-type-takepart-campaign #highlighted {
    padding: 25px 0;
}

.multipage-campaign #highlighted {
    padding: 0;
}

#highlighted .region-highlighted {
    padding: 10px;
}

#edit-terms-of-use {
    display: none;
}

.page-user-register .region-full-width-top, .page-user-register .region-full-width-bottom, .not-logged-in .region-full-width-bottom {
    padding: 35px 20px 0;
}

.page-user-register .region-full-width-bottom, .not-logged-in .region-full-width-bottom {
    padding-top:0px;
}

.page-user-register .region-full-width-top h2, .block-boxes-bid-3068 h2, .block-boxes-bid-3073 h2 {
    color: #99BBCC;
    font-size: 18px;
    font-weight: 300;
    line-height: 18px;
    text-transform: uppercase;
}

.page-user-register .form-item {
    margin-bottom: 1em;
    margin-top: 0;
}

#fbloginbox {
    width: 330px;
    margin-left: auto;
    margin-right: auto;
    background-color:#eef2f5;
    border:solid 1px #9bb7c5;
    min-height: 93px;
}

#fbloginbox #fb_buttonwrapper .fb_button {
    margin-left: 130px;
}

#fbloginbox #fblogin_textoverbutton {
    text-align:center;
    margin-bottom: 5px;
    margin-top: 25px;
    text-align: center;
}

.block-boxes-bid-3068, .block-boxes-bid-3073 {
    padding: 35px 10px 0;
    margin-bottom: -35px;
}

.block-boxes-bid-3065, .block-boxes-bid-3067 {
    margin-bottom: -35px;
}

#fb_buttonwrapper {
    text-align:center;
}

#user-nav li {
    display: inline-block;
    font-weight: normal;
    margin-top:3px;
    vertical-align: bottom;
}

.logged-in #user-nav li {
    margin-left:10px;
    font-weight: normal;
    font-size: 10px;
    height:  14px;
    line-height:  14px;
}
.logged-in #user-nav li.login-0 {
    margin-left:5px;
}
.logged-in #user-nav li.login-1 {
    margin-left:5px;
}


/* --- from css now -- */


#field-custom-273-add-more-wrapper legend {
    display: none;
}

#fb_buttonwrapper {
    padding-bottom: 20px;
    text-align: center;
    width: 206px;
    padding-left: 62px;
}

.addthis_button_facebook_like:hover{
    opacity:1 !important;
}

.node-type-takepart-campaign .main-content .block-boxes h2 {
    border-top:1px dotted #000;
}
/* ... */

